# indicator-datetime

./: CMakeLists.txt  ChangeLog  INSTALL  configure.ac
data/: CMakeLists.txt  com.canonical.indicator.datetime.gschema.xml  com.canonical.indicator.datetime.gschema.xml.in.in  datetime-dialog.ui
debian/: changelog  control  rules
debian/patches/: series  show_in-progress_events.patch
include/datetime/: alarm-queue-simple.h  alarm-queue.h  appointment.h  clock.h  date-time.h  engine-eds.h  engine-mock.h  engine.h  planner-range.h  planner-snooze.h  settings-live.h  settings-shared.h  settings.h  snap.h  timezone-file.h
include/notifications/: notifications.h  sound.h
libmap/: Makefile.am  cc-timezone-map.c  cc-timezone-map.h  tz.c
po/: CMakeLists.txt  LINGUAS  ace.po  af.po  an.po  ar.po  ast.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  fy.po  gl.po  gv.po  he.po  hi.po  hr.po  hu.po  id.po  indicator-datetime.pot  is.po  it.po  (+44 more)
src/: CMakeLists.txt  Makefile.am  actions-live.cpp  alarm-queue-simple.cpp  appointment.cpp  awake.cpp  clock.cpp  date-time.cpp  datetime-prefs-locations.c  datetime-prefs.c  datetime-service.c  engine-eds.cpp  exporter.cpp  formatter-desktop.cpp  gnome-datetime-source.c  gnome-datetime-source.h  gnome-wall-clock.c  haptic.cpp  indicator-datetime.c  main.c  main.cpp  menu.cpp  notifications.cpp  planner-aggregate.cpp  planner-range.cpp  planner-snooze.cpp  service.c  settings-live.cpp  settings-shared.h  snap.cpp  sound.cpp  timedated1-interface.xml  timezone-completion.c  timezone-geoclue.cpp  utils.c  utils.h  wakeup-timer-mainloop.cpp  wakeup-timer-powerd.cpp
tests/: CMakeLists.txt  geoclue-fixture.h  glib-fixture.h  gtestdbus-fixture.h  manual  manual-test-snap.cpp  mock-sound-builder.h  mock-sound.cpp  mock-sound.h  state-fixture.h  test-actions.cpp  test-alarm-queue.cpp  test-clock.cpp  test-dbus-fixture.h  test-eds-ics-missing-trigger.cpp  test-exporter.cpp  test-live-actions.cpp  test-menus.cpp  test-notification.cpp  test-settings.cpp  test-snap.cpp  test-sound.cpp  test-timezone-geoclue.cpp  test-timezones.cpp  test-utils.cc  timedated-fixture.h
